--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -180,7 +180,7 @@
 <main class="main">
   <div class="content">
     <div class="left-side">
-      <svg
+      <!-- <svg
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 982 239"
         fill="none"
@@ -224,11 +224,13 @@
           </linearGradient>
           <clipPath id="a"><path fill="#fff" d="M0 0h982v239H0z" /></clipPath>
         </defs>
-      </svg>
+      </svg> -->
       <h1>Hello, {{ title }}</h1>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
-    <div class="right-side"></div>
+    <div class="right-side">
+      <router-outlet />
+    </div>
   </div>
 </main>
 
@@ -240,5 +242,3 @@
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-
-<router-outlet />
